# Food-Tracker

./: .gitignore  CHECK_LOGS.md  package-lock.json
backend/: README.md  YOUR_ENV_FILE.txt  env.template  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  models.py
backend/app/services/: food_recognition.py  macro_calculator.py  supabase_client.py
backend/database/: schema.sql
frontend/: App.tsx  README.md  app.json  env.template  package-lock.json  package.json  tsconfig.json
frontend/assets/: README.md
frontend/src/config/: api.ts
frontend/src/screens/: DashboardScreen.tsx  FoodEntryScreen.tsx  LoginScreen.tsx  ProfileScreen.tsx
frontend/src/store/: authStore.ts  foodStore.ts
frontend/src/utils/: storage.ts
